# ModelInsider

./: .gitignore  CLAUDE.md  CNN Model_fx_graph_fx_hierarchy.json  CNN Model_fx_graph_module_info.json  COMPREHENSIVE_ACHIEVEMENT_REPORT.md  DESIGN.md  DESIGN_REVISIONS.md  HTP_INPUT_OUTPUT_TAGGING_DESIGN.md  INFERENCE_TEST_REPORT.md  MEMO.md  MEMO_CUSTOM_SYMBOLIC_BREAKTHROUGH.md  MIGRATION_COMPLETE.md  Makefile  NODE_PROCESSOR_DESIGN.md  README.md  REFACTOR_MEMO.md  Simple MLP_fx_graph_fx_hierarchy.json  Simple MLP_fx_graph_module_info.json  TAGGING_STRATEGY.md  TBD.md  TESTING_RESULTS.md  Transformer-like_fx_graph_fx_hierarchy.json  Transformer-like_fx_graph_module_info.json  V2_EXPLANATION.md  advanced_context_resolver.py  bert-tiny.graphml  bert_tiny_config.json  bert_tiny_detailed_analysis.py  bert_tiny_optimized_config.json  check_new_graphml.py  compat_attention_model_fx_fx_hierarchy.json  compat_attention_model_fx_module_info.json  compat_complex_mlp_fx_fx_hierarchy.json  compat_simple_cnn_fx_fx_hierarchy.json  compat_simple_cnn_fx_module_info.json  complex_mlp_fx_fx_hierarchy.json  coverage_stats_fx_fx_hierarchy.json  coverage_stats_fx_module_info.json  custom_exceptions_fx_fx_hierarchy.json  custom_exceptions_fx_module_info.json  (+54 more)
.claude/: hooks.json  settings.local.json
.claude/agents/: adr-architect.md
.claude/hooks/: post-edit-python-ruff.sh
archive/: README.md  V2_RESULTS_SUMMARY.md  cli_backup.py  enhanced_semantic_exporter.py  test_data_flow_analysis.py  test_edge_case_scenarios.py  test_edge_cases_comprehensive.py  test_export_strategies.py  test_integration_workflows.py  test_pattern_recognition.py  test_performance_benchmarks.py  test_regression_suite.py  test_strategy_comparison.py
archive/legacy/: analyze_onnx_structure.py  analyze_untagged_nodes.py  bert_self_attention_test.py  clean_subgraph_extractor.py  main.py  (+19 more)
cli/: __init__.py  export_model.py
cli_test/: bert_tags.json
configs/: sam_input_specs.json  sam_input_specs_correct.json  sam_input_specs_full.json
conversion/: dag_cache_creator.py  hierarchy_preserving_export.py  onnx_function_research.py  research_onnx_conversion.py
debug/: README.md  README_HTP_DEBUGGER.md  debug_hook_execution.py  debug_path_building.py  debug_simple_model.py  debug_tagging_simple.py  htp_debugger.py
docs/: BERT_TINY_GROUND_TRUTH.md  DAG_VALIDATION_SUMMARY.md  GRAPHML_RECOVERY_ANALYSIS.md  GRAPHML_SPECIFICATION_MIGRATION_GUIDE.md  HTP_METADATA_REPORT_SPEC.md  HTP_METADATA_TEMPLATE.json  HTP_METADATA_TEMPLATE_WITH_DESCRIPTIONS.md  REFACTORING_GUIDELINES.md  RESEARCH_SUMMARY.md  SEMANTIC_ENHANCEMENT_ROADMAP.md  STATIC_CACHE_SUMMARY.md  TAGGING_SYSTEM_DEEP_DIVE.md  TESTING.md  discuss-0627.md  optimum_compatibility.md  security_analysis_report.md  test_coverage_report.md
examples/: advanced-strategy-integration.py  basic-enhanced-export.py  demo_onnx_node_tagging.py  hybrid_hierarchy_exporter_demo.ipynb  semantic_mapping_demo.py  strategy-performance-comparison.py  test_htp_integrated_demo.py  working_hierarchy_exporter_demo.ipynb
experiments/: export_monitor_fixes.patch  fix_export_monitor_structure.py  fix_iteration_1.py  improved_hierarchy_implementation.py
legacy/: analyze_onnx_structure.py  analyze_untagged_nodes.py  clean_subgraph_extractor.py  dag_extractor.py  detailed_onnx_comparison.py  enhanced_dag_extractor.py  extract_onnx_tags.py  fix_module_tagging.py  onnx_parser.py  test_universal_hierarchy.py  verify_onnx_tags.py
modelexport/: __init__.py  __main__.py  cli.py  constants.py  graph_comparison.py  graph_filtering.py  hierarchy_exporter.py  onnx_categorization.py  tag_utils.py  unified_export.py  utils.py  version.py
models/: README.md
scripts/: analyze_htp_performance.py  analyze_trace_map_patterns.py  analyze_usage_based_performance.py  benchmark_performance.py  compare_tracing_builders.py  debug_bert_tiny.py  debug_optimized_exporter.py  enhanced_trace_map_final.py  examine_onnx_structures.py  experimental_enhanced_trace_map.py  final_tracing_comparison.py  migrate_tests.py  simple_export_functions_test.py  smoke_test_bert_notebook.py  test_annotation_tagging_strategy.py  test_bert_notebook.py  test_enhanced_htp.py  test_enhanced_semantic_exporter.py  test_export_modules_as_functions.py  test_final_notebook.py  test_fixed_notebook.py  test_hf_models.py  test_htp_optimizations.py  test_maximum_lazy.py  test_notebook_cells.py  test_production_readiness.py  test_trace_capture_improvement.py  test_tracing_integration.py  test_ultra_simple.py  test_unified_framework.py  test_usage_based_optimizations.py  torch_onnx_utils_demo.py  trace_annotation_usage_in_onnx.py  validate_graphml.py  verify_enhanced_semantic_bert_tiny.py  verify_htp.py  verify_htp_integration.py  visualize_hierarchy_optimization.py
test_results_structured/: ANSWERS_TO_USER_QUESTIONS.md  COMPREHENSIVE_ANSWERS.md  COMPREHENSIVE_TEST_SUMMARY.md
tests/: __init__.py  analyze_vit_structure.py  conftest.py  constants.py  operation_mapping_demo.py  simple_hierarchy_test.py  test_base_hierarchy.py  test_baseline_comparison.py  test_bidirectional_conversion.py  test_cli_bidirectional.py  test_cli_integration.py  test_cli_interface.py  test_complex_models.py  test_comprehensive_e2e.py  test_comprehensive_integration.py  test_core_functionality.py  test_data_flow_analysis.py  test_directory_creation.py  test_edge_case_scenarios.py  test_edge_cases_comprehensive.py  test_enhance_exporter_config.py  test_error_recovery.py  test_graphml_integration.py  test_helpers.py  test_hierarchical_converter.py  test_hierarchy_completeness_fix.py  test_hierarchy_exporter.py  test_hierarchy_scope_format.py  test_hierarchy_truncation.py  test_hierarchy_truncation.py.bak  test_htp_console_output.py  test_htp_console_output.py.bak  test_htp_export_monitor_comprehensive.py  test_htp_export_monitor_comprehensive.py.bak  test_htp_export_monitor_fixed.py  test_htp_export_monitor_fixed.py.bak  test_htp_export_monitor_functional.py  test_htp_export_monitor_no_duplicates.py  test_htp_export_monitor_no_duplicates.py.bak  test_htp_export_monitor_updated.py  (+29 more)
(+921 files in other folders)
