[project]
name = "modelexport"
version = "0.1.0"
description = "Universal hierarchy-preserving ONNX export for Hugging Face models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers",
    "onnx",
    "numpy",
    "torchvision",
    "click>=8.0.0",
    "pandas>=2.3.0",
]

[project.scripts]
modelexport = "modelexport.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy"
]

[tool.setuptools.packages.find]
exclude = ["temp*", "data*", "external*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
