[project]
name = "modelexport"
version = "0.1.0"
description = "Universal hierarchy-preserving ONNX export for Hugging Face models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers",
    "onnx>=1.17.0,<1.18.0",
    "numpy",
    "torchvision",
    "click>=8.0.0",
    "pandas>=2.3.0",
    "onnxruntime>=1.22.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "datasets>=3.6.0",
    "optimum>=1.26.1",
    "rich>=14.0.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pydantic>=2.11.7",
    "snakemd>=2.3.0",
    "psutil>=7.0.0",
    "lxml>=5.0.0",
    "scikit-learn>=1.7.1",
]

[project.scripts]
modelexport = "modelexport.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy"
]

[tool.setuptools.packages.find]
exclude = ["temp*", "data*", "external*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short", 
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
    "--durations=10"
]
minversion = "6.0"

# Markers for test categorization (following pytest best practices 2025)
markers = [
    # Test Categories
    "smoke: Core functionality tests that must always pass",
    "regression: Full regression test suite", 
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may require external services)",
    "e2e: End-to-end tests (slower, full workflows)",
    
    # Test Attributes
    "slow: Tests that take > 1 second to run",
    "flaky: Tests known to be intermittently failing", 
    "requires_network: Tests requiring network access",
    
    # Feature-Specific Markers
    "version: Tests related to version management and detection",
    "cli: Command-line interface tests",
    "graphml: GraphML format and validation tests", 
    "htp: HTP strategy-specific tests",
    "security: Security and vulnerability tests",
    "resource: Resource management tests",
    "error_recovery: Error recovery and resilience tests",
    
    # ONNX Auto Processor Markers
    "performance: Speed and memory benchmark tests (20 min)",
    "multimodal: Tests specifically for multimodal models",
    "requires_models: Tests that need pre-downloaded models",
    
    # Legacy/Compatibility Markers
    "strategy: Strategy-specific tests (HTP)",
    "requires_transformers: Tests that require transformers library",
    "requires_onnx: Tests that require ONNX runtime", 
    "must: CARDINAL RULES validation tests",
    "sanity: Sanity check tests for basic functionality",
    
    # Environment Markers
    "environment: Environment portability and cross-platform tests",
    "requires_gpu: Tests requiring GPU/CUDA"
]

# Warning filters
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning", 
    "ignore::PendingDeprecationWarning"
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
indent-width = 4

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "temp",
    "data",
    "external",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade (handles future annotations)
    "RUF",  # Ruff-specific rules
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]

# Rules to ignore
ignore = [
    "E501",  # Line too long (trust formatter)
    "E712",  # Allow x == False comparisons
]

# Auto-fixable rules
fixable = [
    "F401",   # Remove unused imports
    "I",      # isort fixes
    "UP",     # pyupgrade fixes (including annotations)
    "RUF100", # Remove unused noqa comments
    "B",      # flake8-bugbear fixes
    "C4",     # flake8-comprehensions fixes
    "SIM",    # flake8-simplify fixes
]

[tool.ruff.lint.pyupgrade]
# Keep runtime typing for compatibility if needed
keep-runtime-typing = false  # We're using future annotations

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]  # Import violations in init files
"tests/*.py" = ["S101"]  # Allow assert in tests

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces around operators
indent-style = "space"
# Skip magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect line ending
line-ending = "auto"

[dependency-groups]
dev = [
    "freezegun>=1.5.3",
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "pytest-timeout>=2.4.0",
]
